--- a/Mars/Mars/Mars/Main/首页/View/Bizarea.xib
+++ b/Mars/Mars/Mars/Main/首页/View/Bizarea.xib
@@ -15,31 +15,43 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <animations/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </imageView>
+                <view contentMode="scaleToFill" id="KeI-k5-psP">
+                    <rect key="frame" x="0.0" y="0.0" width="277" height="141"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <animations/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="7yl-47-aOz">
                     <rect key="frame" x="124" y="160" width="80" height="80"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <animations/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="prr-fy-niZ">
                     <rect key="frame" x="226" y="160" width="80" height="80"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <animations/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="4mD-FX-JXU">
                     <rect key="frame" x="20" y="250" width="80" height="80"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <animations/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="vEA-3n-AvX">
                     <rect key="frame" x="124" y="250" width="80" height="80"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <animations/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="1yA-CK-k1L">
                     <rect key="frame" x="20" y="160" width="80" height="80"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <animations/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </imageView>
                 <view contentMode="scaleToFill" id="Iuf-qf-f4O">
                     <rect key="frame" x="226" y="250" width="80" height="80"/>
@@ -64,6 +76,7 @@
             <connections>
                 <outlet property="HeadView" destination="E8e-5m-HA5" id="XWO-vd-3lX"/>
                 <outlet property="MoreView" destination="Iuf-qf-f4O" id="GR9-EO-bY3"/>
+                <outlet property="grayView" destination="KeI-k5-psP" id="Fqv-bG-oUh"/>
                 <outlet property="icon1" destination="1yA-CK-k1L" id="wm3-Bx-F9t"/>
                 <outlet property="icon2" destination="7yl-47-aOz" id="Qhs-uz-KTY"/>
                 <outlet property="icon3" destination="prr-fy-niZ" id="TSC-ab-YbR"/>
