--- a/Mars/Mars/Mars/Main/首页/View/CommentView.xib
+++ b/Mars/Mars/Mars/Main/首页/View/CommentView.xib
@@ -14,7 +14,7 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uPf-Ke-pyT">
                     <rect key="frame" x="20" y="0.0" width="40" height="40"/>
                     <animations/>
-                    <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="9tW-kS-frM"/>
                         <constraint firstAttribute="width" constant="40" id="EzL-xJ-UXn"/>
@@ -48,7 +48,7 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pcg-9C-08i">
                     <rect key="frame" x="90" y="30" width="80" height="80"/>
                     <animations/>
-                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="80" id="ZAi-y1-oyi"/>
                     </constraints>
